--- a/visualraster_gae/templates/index.html
+++ b/visualraster_gae/templates/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+        <title>Visual Raster: tile manipulation using Canvas</title>
         <style>
         body, html{
             font-family: Helvetica;
@@ -17,18 +18,24 @@
             width: 100%;
             height: 400px;
         }
+        #map_wrapper {
+            margin-top: 20px;
+            border: 1px solid #DDD;
+            padding: 4px;
+        }
         </style>
     </head>
-    <body style="background: #DDD;">
+    <body style="background: #FFF;">
  
        <div id="wrap">
-       <h1>threshold</h1>
-       <p>move slider</p>
+       <h1>Visual Raster: tile manipulation using Canvas</h1>
+       <p>Move the slider to filter area above certain meters</p>
        <div id="slider"></div>
-       <div id="slider_value">0</div>
-       <div id="current_canvas">0</div>
-       <!--<canvas id="R" style="background:#fff" ></canvas> -->
-       <div id="map"></div>
+       <div id="slider_value">0 meters</div>
+       <!--<div id="current_canvas">0</div>-->
+       <div id="map_wrapper">
+        <div id="map"></div>
+       </div>
        </div>
 
        <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
@@ -71,7 +78,7 @@
                 setup_ui: function() {
                     $("#slider").slider({
                         slide: function(event, ui) {  
-                            $("#slider_value").html(8000*ui.value/100.0);
+                            $("#slider_value").html(8000*ui.value/100.0 + " meters");
                             App.filter_tiles(ui.value);
                         }
                     });
