composing tiles into one canvas in order to process the whole image

--- a/visualraster_gae/templates/index.html
+++ b/visualraster_gae/templates/index.html
@@ -23,6 +23,7 @@
             border: 1px solid #DDD;
             padding: 4px;
         }
+        
         </style>
     </head>
     <body style="background: #FFF;">
@@ -34,8 +35,9 @@
        <div id="slider_value">0 meters</div>
        <!--<div id="current_canvas">0</div>-->
        <div id="map_wrapper">
-        <div id="map"></div>
+           <div id="map"></div>
        </div>
+       <canvas id="canvas_test"></canvas>
        </div>
 
        <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
