--- a/visualraster_gae/templates/nfdi.html
+++ b/visualraster_gae/templates/nfdi.html
@@ -6,7 +6,8 @@ function canvas_setup(canvas, coord, zoom) {
       var image = new Image();  
       var ctx = canvas.getContext('2d');
       //image.src = "/map/z" + zoom + "/"+ coord.x + "/" + coord.y +".png";
-      image.src = "/proxy/earthengine.googleapis.com/map/6c3a7801be27c267a6d81fe88008e9ad/" + zoom + "/" + coord.x +"/"+ coord.y +"?token=d8efcb9bd7c3bdaad50fabfd2dd405cc"
+      //image.src = "/proxy/earthengine.googleapis.com/map/6c3a7801be27c267a6d81fe88008e9ad/" + zoom + "/" + coord.x +"/"+ coord.y +"?token=d8efcb9bd7c3bdaad50fabfd2dd405cc"
+      image.src = "/proxy/mountainbiodiversity.org/env/z" + zoom + "/"+ coord.x + "/" + coord.y +".png";
       canvas.image = image;
       canvas.coord = coord;
       $(image).load(function() { 
@@ -65,5 +66,15 @@ function filter(image_data, w, h, threshold) {
         
        google.maps.event.addListener(App.map, 'center_changed', encode_hash);
        google.maps.event.addListener(App.map, 'zoom_changed', encode_hash);
+       google.maps.event.addListener(App.map, 'click', function() {
+        var c = App.heightLayer.composed("#map");
+        var canvas = document.getElementById("canvas_test");
+        var ctx = canvas.getContext('2d');
+        ctx.width = canvas.width = c.width;
+        ctx.height = canvas.height = c.height;
+        
+        ctx.drawImage(c, 0, 0);
+        delete c;
+});
     });
 {% endblock %}
