added som credits

--- a/visualraster_gae/templates/index.html
+++ b/visualraster_gae/templates/index.html
@@ -23,6 +23,13 @@
             border: 1px solid #DDD;
             padding: 4px;
         }
+        a {
+            color: #06c;
+        }
+        #credits {
+            text-align: center;
+            font-size: 90%;
+        }
         
         </style>
     </head>
@@ -37,6 +44,7 @@
        <div id="map_wrapper">
            <div id="map"></div>
        </div>
+       <p id="credits">brought to you by <a href="http://vizzuality.com">Vizzuality</a><p>
        <canvas id="canvas_test"></canvas>
        </div>
 
